Fixed safari alignment bug

--- a/assets/sass/components/_programme.scss
+++ b/assets/sass/components/_programme.scss
@@ -52,6 +52,11 @@
 	  align-items: center;
 	  justify-content: center;
   }
+
+  span {
+  	text-align: center;
+  	width: 100%;
+  }
 }
 
 .programme__content {
